--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+			<scope>8.0.16</scope>
 		</dependency>
 
 		<!--引入swagger文档-->
@@ -91,8 +91,7 @@
 			<version>2.6.1</version>
 		</dependency>
 
-
-		<!--&lt;!&ndash; 忽略自带的日志框架. &ndash;&gt;-->
+		<!-- 忽略自带的日志框架. -->
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
 			<!--<artifactId>spring-boot-starter</artifactId>-->
@@ -103,7 +102,7 @@
 				<!--</exclusion>-->
 			<!--</exclusions>-->
 		<!--</dependency>-->
-		<!--&lt;!&ndash; log4j. &ndash;&gt;-->
+		<!-- log4j. -->
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
 			<!--<artifactId>spring-boot-starter-log4j2</artifactId>-->
@@ -122,6 +121,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.20</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
 		</dependency>
 
 	</dependencies>
@@ -144,7 +148,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!--引入mybatis逆向工程依赖插件-->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.5</version>
+				<configuration>
+					<verbose>true</verbose>
+					<overwrite>true</overwrite>
+				</configuration>
+			</plugin>
 		</plugins>
+
 	</build>
 
 </project>
