--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 		<!--使用lombok插件（主要针对pojo进行优化）-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -126,6 +131,14 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
+		</dependency>
+
+
+		<!--阿里短信sdk-->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-core</artifactId>
+			<version>4.1.0</version>
 		</dependency>
 
 	</dependencies>
